--- a/api/package.json
+++ b/api/package.json
@@ -32,6 +32,8 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
+    "csurf": "^1.10.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "google-auth-library": "^9.15.1",
@@ -52,6 +54,8 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/csurf": "^1.11.5",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
